hphp/hack/test/typecheck/array_sub.php.exp
File "array_sub.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
  File "array_sub.php", line 12, characters 27-40:
  Expected `darray<[unresolved], [unresolved]>`
  File "array_sub.php", line 20, characters 15-25:
  But got `varray<int>`
